# FF1-Helper

./: build.sh  dev.sh  mypy.ini  pyproject.toml  run.py
ff1info/: ff1info.py
ff1info/data/: spells.py
