[tool.poetry]
name = "ff1info"
version = "0.1.0"
description = "a small program that provides info about FF1, with fixes"
authors = ["Steven Biro <steven.biro@mail.utoronto.ca>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pyinstaller = "^4.2"
fuzzywuzzy-stubs = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
